# letta-evals

./: .env.example  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  PRINCIPAL_REVIEW_BACKLOG.md  README.md  plot_filesystem_results.py  pyproject.toml  release-please-config.json  result.jsonl  results.jsonl
docs/: modal-sandbox.md  runner-refactor.md
leaderboard_site/: .eleventy.js  README.md  package-lock.json  package.json
letta-leaderboard/: README.md  generate_leaderboard_results.py  leaderboard_filesystem_results.yaml  leaderboard_results.yaml  leaderboard_skill_results.yaml  updates.md
letta_evals/: __init__.py  cli.py  constants.py  decorators.py  metrics.py  models.py  pricing.py  rewards.py  runner.py  runner_grading.py  streaming.py  types.py  utils.py  workspaces.py
scripts/: benchmark_rich_progress.py
test-output/: test_single_suitecurrent
tests/: conftest.py  test_cleanup.py  test_cli_single_sample.py  test_cli_validate.py  test_examples_e2e_live.py  test_execution_artifacts_token_data.py  test_execution_trace_token_data.py  test_extractors.py  test_filesystem_generation_validation.py  test_gates.py  test_graders.py  test_hf_dataset.py  test_import_laziness.py  test_letta_agent_target_token_data.py  test_letta_code_target_env_overrides.py  test_letta_code_target_token_data.py  test_loader.py  test_metrics.py  test_modal_sandbox.py  test_pricing.py  test_rewards.py  test_rich_progress.py  test_rich_renderer.py  test_rubric_grader.py  test_runner_sandbox_dispatch.py  (+7 more)
(+1221 files in other folders)
