[project]
name = "letta-evals-kit"
version = "0.1.0"
description = "Evaluation framework for Letta AI agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "letta-client>=0.1.319",
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
    "jsonpath-ng>=1.6.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "anyio==4.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
letta-evals = "letta_evals.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [
    "E501",  # line too long (cannot be autofixed)
    "E731",  # lambda assignment (cannot be autofixed)
]